--- a/tutorials/RecSys22tutorial/01_Introduction.ipynb
+++ b/tutorials/RecSys22tutorial/01_Introduction.ipynb
@@ -1456,7 +1456,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1470,7 +1470,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
