--- a/tutorials/RecSys22tutorial/03_Customize_Merlin_Models.ipynb
+++ b/tutorials/RecSys22tutorial/03_Customize_Merlin_Models.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Copyright 2021 NVIDIA Corporation. All Rights Reserved.\n",
+    "# Copyright 2022 NVIDIA Corporation. All Rights Reserved.\n",
     "#\n",
     "# Licensed under the Apache License, Version 2.0 (the \"License\");\n",
     "# you may not use this file except in compliance with the License.\n",
@@ -36,7 +36,9 @@
    "id": "ebc9c8c6-9fab-435f-958b-923b0f3d6ff4",
    "metadata": {},
    "source": [
-    "In this lab, .."
+    "Merlin Models provides common and state-of-the-art RecSys architectures in a high-level API as well as all the required low-level building blocks (e.g., input blocks, MLP layers, prediction tasks, loss functions, etc.) or you to create your own architecture. \n",
+    "\n",
+    "In this lab, we define DLRM model architecture from scratch and customize it with Merlin Models."
    ]
   },
   {
@@ -1105,13 +1107,37 @@
    "id": "44e94162-fd41-477b-ab10-f2e603dc6bd2",
    "metadata": {},
    "source": [
-    "In this hands-on lab we learned ..."
+    "In this hands-on lab we learned\n",
+    "\n",
+    "- how to use a subset of these pre-existing blocks to create the DLRM model\n",
+    "- how to add HashedCross features to DLRM Model\n",
+    "- how to replace DotProductInteractionBlock with CrossBlock"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "218e00ae-59e1-4934-ae69-dd05d13a246c",
+   "metadata": {},
+   "source": [
+    "Please execute the cell below to shut down the kernel before moving on to the next notebook, `04-Building-multi-stage-RecSys-with-Merlin-Systems`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4e28231-85dd-4f17-8243-75a4d9c94b1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import IPython\n",
+    "app = IPython.Application.instance()\n",
+    "app.kernel.do_shutdown(True)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1125,7 +1151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
