--- a/tutorials/RecSys22tutorial/03_Customize_Merlin_Models.ipynb
+++ b/tutorials/RecSys22tutorial/03_Customize_Merlin_Models.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = 'data/'\n",
+    "data_path = '/workspace/data/ecom/'\n",
     "output_path = os.path.join(data_path,'processed_nvt')"
    ]
   },
