--- a/tutorials/RecSys22tutorial/04_Building_Multi_Stage_RecSys.ipynb
+++ b/tutorials/RecSys22tutorial/04_Building_Multi_Stage_RecSys.ipynb
@@ -152,11 +152,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = 'data/'\n",
+    "data_path = '/workspace/data/ecom/'\n",
     "output_path = os.path.join(data_path,'processed_nvt')\n",
     "output_path2 = os.path.join(data_path,'processed_filtered')\n",
     "BASE_DIR = os.environ.get(\n",
-    "    \"BASE_DIR\", \"/dli/task/\"\n",
+    "    \"BASE_DIR\", \"/workspace/recsys_tutorial/\"\n",
     ")"
    ]
   },
