--- a/tutorials/RecSys22tutorial/05-Deploying-multi-stage-RecSys-with-Merlin-Systems.ipynb
+++ b/tutorials/RecSys22tutorial/05-Deploying-multi-stage-RecSys-with-Merlin-Systems.ipynb
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "BASE_DIR = os.environ.get(\n",
-    "    \"BASE_DIR\", \"/dli/task/\"\n",
+    "    \"BASE_DIR\", \"/workspace/recsys_tutorial/\"\n",
     ")\n",
     "\n",
     "# define feature repo path\n",
