remove redundant cell

--- a/tutorials/RecSys22tutorial/04_Building_Multi_Stage_RecSys.ipynb
+++ b/tutorials/RecSys22tutorial/04_Building_Multi_Stage_RecSys.ipynb
@@ -592,9 +592,9 @@
    "source": [
     "model = mm.DLRMModel(\n",
     "    schema,\n",
-    "    embedding_dim=32,\n",
-    "    bottom_block=mm.MLPBlock([64, 32]),\n",
-    "    top_block=mm.MLPBlock([64, 32]),\n",
+    "    embedding_dim=64,\n",
+    "    bottom_block=mm.MLPBlock([128, 64]),\n",
+    "    top_block=mm.MLPBlock([128, 64, 32]),\n",
     "    prediction_tasks=mm.BinaryClassificationTask(target_column),\n",
     ")"
    ]
@@ -668,37 +668,6 @@
     "valid_dataset = valid_dataset.map(add_negatives)\n",
     "metrics = model.evaluate(valid_dataset, return_dict=True)\n",
     "metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "eeaab292-2d0f-48c1-be81-97496da626d6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "89/89 [==============================] - 1s 7ms/step - loss: 0.9885 - binary_accuracy: 0.5484 - auc: 0.5645 - regularization_loss: 0.0000e+00\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'loss': 0.9885433912277222,\n",
-       " 'binary_accuracy': 0.5484207272529602,\n",
-       " 'auc': 0.5645443797111511,\n",
-       " 'regularization_loss': 0.0}"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.evaluate(valid_raw, return_dict=True, batch_size = 2048)"
    ]
   },
   {
