--- a/tutorials/RecSys22tutorial/02_Implementing_RecSys_architectures.ipynb
+++ b/tutorials/RecSys22tutorial/02_Implementing_RecSys_architectures.ipynb
@@ -161,7 +161,7 @@
     "\n",
     "We use csv files from 2019-Oct to 2020-April for training and validating our models, so you can visit this site and download the csv files from [Kaggle](https://www.kaggle.com/mkechinov/ecommerce-behavior-data-from-multi-category-store). \n",
     "\n",
-    "We already performed certain preprocessing steps on the csv files of the raw dataset. You can visit this notebook `01_Introduction.ipynb` to go through the code to create the `train` and `valid` parquet files that we are using in this notebook and in the following ones."
+    "We already performed certain preprocessing steps on the csv files of the raw dataset. You can visit this notebook `01_Data_preparation.ipynb` to go through the code to create the `train` and `valid` parquet files that we are using in this notebook and in the following ones."
    ]
   },
   {
@@ -383,7 +383,7 @@
    "id": "d58f7af1-0df5-414e-b098-2b1940def0ed",
    "metadata": {},
    "source": [
-    "Apply Target encoding to categorical columns."
+    "Below, we apply target encoding (TE) to categorical columns. `TE` is a popular feature engineering technique for tabular data. `TE` calculates the statistics from a target variable grouped by the unique values of one or more categorical features. It was used by many top solutions in the [RecSys2020](https://blog.twitter.com/engineering/en_us/topics/insights/2020/what_twitter_learned_from_recsys2020) competition. In previous years, TE was used, as well. You can read and lear more about target encoding in this [blog post](https://medium.com/rapids-ai/target-encoding-with-rapids-cuml-do-more-with-your-categorical-data-8c762c79e784)."
    ]
   },
   {
@@ -507,6 +507,14 @@
     "NVTabular exported the schema file of our processed dataset. The schema.pbtxt is a protobuf text file contains features metadata, including statistics about features such as cardinality, min and max values and also tags based on their characteristics and dtypes (e.g., categorical, continuous, list, item_id). The metadata information is loaded from schema and their tags are used to automatically set the parameters of Merlin Models. In other words, Merlin Models relies on the schema object to automatically build all necessary input and output layers.\n",
     "\n",
     "To learn more about NVTabular and schema object you can visit the example notebooks in the NVTabular [repo](https://github.com/NVIDIA-Merlin/NVTabular/tree/main/examples) and Merlin Models [repo](https://github.com/NVIDIA-Merlin/models/blob/main/examples/02-Merlin-Models-and-NVTabular-integration.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79cb2cad-b4eb-44e0-b185-6fdf2aa45e93",
+   "metadata": {},
+   "source": [
+    "### Model Building and Training on GPU with Merlin Models"
    ]
   },
   {
@@ -1049,7 +1057,7 @@
     "\n",
     "The `deep_block` parameter is a Multilayer Perceptron block consisting of a stack of linear layers. Here the parameters we can alter are the number and dimensionality of layers (`[64, 32]` that is passed indicates 64 nodes in the first layer and 32 in the second), the activation of our layers controlled by the `activation` parameter.\n",
     "\n",
-    "We again have two parameters for specifying the level of regularization:`kernel_regularizer` and `bias_regularizer` that allow us to apply penalties on layer parameters or layer activity during optimization.`kernel_regularizer` is used to apply a penalty on the layer's kernel, whereas `bias_regularizer` is used to apply a penalty on the layer's bias. You can learn more about tf.keras.regularizers [here](https://www.tensorflow.org/api_docs/python/tf/keras/regularizers/Regularizer).\n",
+    "We again have two parameters for specifying the level of regularization:`kernel_regularizer` and `bias_regularizer` that allow us to apply penalties on layer parameters or layer activity during optimization.`kernel_regularizer` is used to apply a penalty on the layer's weights, whereas `bias_regularizer` is used to apply a penalty on the layer's bias. You can learn more about tf.keras.regularizers [here](https://www.tensorflow.org/api_docs/python/tf/keras/regularizers/Regularizer).\n",
     "\n",
     "The `dropout` parameter controls the amount of dropout that will be applied. With a value greater than 0, during training, some nodes (with probability equal to the `dropout` parameter value) will be excluded from the calculation. This is helpful as it can prevent overspecialization -- no node can be completely sure it will receive input from any other node in the forward pass. This parameter can be thought of as another way to combat overfitting.\n",
     "\n",
@@ -1286,7 +1294,7 @@
    "id": "0c8e7d48-1c62-4e94-a22e-6ee6447c4ed3",
    "metadata": {},
    "source": [
-    "Please execute the cell below to shut down the kernel before moving on to the next notebook `02-Building-multi-stage-RecSys-with-Merlin-Systems`."
+    "Please execute the cell below to shut down the kernel before moving on to the next notebook `03_Customize_Merlin_Models`."
    ]
   },
   {
