--- a/tutorials/RecSys22tutorial/04_Building_Multi_Stage_RecSys.ipynb
+++ b/tutorials/RecSys22tutorial/04_Building_Multi_Stage_RecSys.ipynb
@@ -82,6 +82,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bba999b9-3b8c-4aba-a264-be6ef45ee4f9",
+   "metadata": {},
+   "source": [
+    "**GOAL:** In this lab, we build and deploy a multi-stage recommender system to predict candidate items relevance scores, and then recommend top-k most relevant items for a given user."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3b54d3c6-fe6c-4a41-ab5e-c80c92efd91d",
    "metadata": {},
    "source": [
@@ -1850,7 +1858,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1864,7 +1872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
