--- a/tutorials/RecSys22tutorial/05-Deploying-multi-stage-RecSys-with-Merlin-Systems.ipynb
+++ b/tutorials/RecSys22tutorial/05-Deploying-multi-stage-RecSys-with-Merlin-Systems.ipynb
@@ -67,39 +67,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4db1b5f1-c8fa-4e03-8744-1197873c5bee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "09/07/2022 06:38:15 PM INFO:Loading faiss with AVX2 support.\n",
-      "09/07/2022 06:38:15 PM INFO:Could not load library with AVX2 support due to:\n",
-      "ModuleNotFoundError(\"No module named 'faiss.swigfaiss_avx2'\")\n",
-      "09/07/2022 06:38:15 PM INFO:Loading faiss.\n",
-      "09/07/2022 06:38:15 PM INFO:Successfully loaded faiss.\n",
-      "09/07/2022 06:38:16 PM INFO:init\n",
-      "/usr/local/lib/python3.8/dist-packages/cudf/utils/metadata/orc_column_statistics_pb2.py:19: DeprecationWarning: Call to deprecated create function FileDescriptor(). Note: Create unlinked descriptors is going to go away. Please use get/find descriptors from generated code or query the descriptor_pool.\n",
-      "  DESCRIPTOR = _descriptor.FileDescriptor(\n",
-      "/usr/local/lib/python3.8/dist-packages/cudf/utils/metadata/orc_column_statistics_pb2.py:37: DeprecationWarning: Call to deprecated create function FieldDescriptor(). Note: Create unlinked descriptors is going to go away. Please use get/find descriptors from generated code or query the descriptor_pool.\n",
-      "  _descriptor.FieldDescriptor(\n",
-      "/usr/local/lib/python3.8/dist-packages/cudf/utils/metadata/orc_column_statistics_pb2.py:30: DeprecationWarning: Call to deprecated create function Descriptor(). Note: Create unlinked descriptors is going to go away. Please use get/find descriptors from generated code or query the descriptor_pool.\n",
-      "  _INTEGERSTATISTICS = _descriptor.Descriptor(\n",
-      "/usr/local/lib/python3.8/dist-packages/tritonclient/grpc/model_config_pb2.py:19: DeprecationWarning: Call to deprecated create function FileDescriptor(). Note: Create unlinked descriptors is going to go away. Please use get/find descriptors from generated code or query the descriptor_pool.\n",
-      "  DESCRIPTOR = _descriptor.FileDescriptor(\n",
-      "/usr/local/lib/python3.8/dist-packages/tritonclient/grpc/model_config_pb2.py:33: DeprecationWarning: Call to deprecated create function EnumValueDescriptor(). Note: Create unlinked descriptors is going to go away. Please use get/find descriptors from generated code or query the descriptor_pool.\n",
-      "  _descriptor.EnumValueDescriptor(\n",
-      "/usr/local/lib/python3.8/dist-packages/tritonclient/grpc/model_config_pb2.py:27: DeprecationWarning: Call to deprecated create function EnumDescriptor(). Note: Create unlinked descriptors is going to go away. Please use get/find descriptors from generated code or query the descriptor_pool.\n",
-      "  _DATATYPE = _descriptor.EnumDescriptor(\n",
-      "/usr/local/lib/python3.8/dist-packages/tritonclient/grpc/model_config_pb2.py:335: DeprecationWarning: Call to deprecated create function FieldDescriptor(). Note: Create unlinked descriptors is going to go away. Please use get/find descriptors from generated code or query the descriptor_pool.\n",
-      "  _descriptor.FieldDescriptor(\n",
-      "/usr/local/lib/python3.8/dist-packages/tritonclient/grpc/model_config_pb2.py:328: DeprecationWarning: Call to deprecated create function Descriptor(). Note: Create unlinked descriptors is going to go away. Please use get/find descriptors from generated code or query the descriptor_pool.\n",
-      "  _MODELRATELIMITER_RESOURCE = _descriptor.Descriptor(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -304,7 +275,7 @@
    "id": "489c3244-f260-485f-9796-938855a8c273",
    "metadata": {},
    "source": [
-    "Create feature store client with FEAST"
+    "Create feature store client with [FEAST](https://github.com/feast-dev/feast)."
    ]
   },
   {
@@ -428,7 +399,7 @@
    "id": "304a4d09-db05-4666-b520-75dbbbc7ab17",
    "metadata": {},
    "source": [
-    "Merge the user features and items features to create the all set of combined features that were used in model training using `UnrollFeatures` operator which takes a target column and joins the \"unroll\" columns to the target. This helps when broadcasting a series of user features to a set of items."
+    "Merge the user features and items features to create the all set of combined features that were used in model training using `UnrollFeatures` operator which takes a target column and joins the \"unroll\" columns to the target. This helps when broadcasting a series of user features to a set of items, in other words, we take one set of user features and send it to many sets of item features."
    ]
   },
   {
@@ -941,7 +912,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -955,7 +926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.10"
   },
   "merlin": {
    "containers": [
