fix headings and feast definition

--- a/tutorials/RecSys22tutorial/02-Implementing-RecSys-architectures.ipynb
+++ b/tutorials/RecSys22tutorial/02-Implementing-RecSys-architectures.ipynb
@@ -66,7 +66,7 @@
    "id": "6cbbc0ed-0253-4f56-a368-a5536c77e8e9",
    "metadata": {},
    "source": [
-    "## 1. Implementing popular RecSys architectures and algorithms with Merlin Models"
+    "## 2. Implementing popular RecSys architectures and algorithms with Merlin Models"
    ]
   },
   {
@@ -149,7 +149,7 @@
    "id": "5a9d46aa-e234-4a7e-bed5-46bc0d7a4c21",
    "metadata": {},
    "source": [
-    "### Feature Engineering on GPU with NVTabular"
+    "### 2.1. Feature Engineering on GPU with NVTabular"
    ]
   },
   {
@@ -161,7 +161,7 @@
     "\n",
     "We use csv files from 2019-Oct to 2020-April for training and validating our models, so you can visit this site and download the csv files from [Kaggle](https://www.kaggle.com/mkechinov/ecommerce-behavior-data-from-multi-category-store). \n",
     "\n",
-    "We already performed certain preprocessing steps on the csv files of the raw dataset. You can visit this notebook `01_Data_preparation.ipynb` to go through the code to create the `train` and `valid` parquet files that we are using in this notebook and in the following ones."
+    "We already performed certain preprocessing steps on the csv files of the raw dataset. You can visit this notebook `01-Data-preparation.ipynb` to go through the code to create the `train` and `valid` parquet files that we are using in this notebook and in the following ones."
    ]
   },
   {
@@ -706,7 +706,7 @@
    "id": "79cb2cad-b4eb-44e0-b185-6fdf2aa45e93",
    "metadata": {},
    "source": [
-    "### Model Building and Training on GPU with Merlin Models"
+    "### 2.2. Model Building and Training on GPU with Merlin Models"
    ]
   },
   {
@@ -1082,7 +1082,7 @@
    "id": "ca4d14c7-8013-4f97-8721-bf51ffc2e73b",
    "metadata": {},
    "source": [
-    "### DLRM Model"
+    "#### 2.2.1. DLRM Model"
    ]
   },
   {
@@ -1170,7 +1170,7 @@
    "id": "806d989e-260a-4117-8536-28b3baee7ccd",
    "metadata": {},
    "source": [
-    "### DCN Model"
+    "#### 2.2.2. DCN Model"
    ]
   },
   {
@@ -1359,7 +1359,7 @@
    "id": "450fe1ab-2e56-4378-b65f-e2ff1a48b3ea",
    "metadata": {},
    "source": [
-    "### XGBoost"
+    "#### 2.2.3. XGBoost"
    ]
   },
   {
@@ -1496,7 +1496,7 @@
    "id": "0c8e7d48-1c62-4e94-a22e-6ee6447c4ed3",
    "metadata": {},
    "source": [
-    "Please execute the cell below to shut down the kernel before moving on to the next notebook `03_Customize_Merlin_Models`."
+    "Please execute the cell below to shut down the kernel before moving on to the next notebook `03-Customize-Merlin-Models`."
    ]
   },
   {
@@ -1525,7 +1525,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1539,7 +1539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
