--- a/tutorials/RecSys22tutorial/04-Building-multi_stage-RecSys.ipynb
+++ b/tutorials/RecSys22tutorial/04-Building-multi_stage-RecSys.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "<img src=\"http://developer.download.nvidia.com/compute/machine-learning/frameworks/nvidia_logo.png\" style=\"width: 90px; float: right;\">\n",
     "\n",
-    "## 2. Building Multi-Stage Recommender Systems"
+    "## 4. Building Multi-Stage Recommender Systems"
    ]
   },
   {
@@ -635,7 +635,7 @@
    "id": "68cb8a3b-e60e-4815-9d72-c7d0e6c6ca6f",
    "metadata": {},
    "source": [
-    "### Building and Training a Candidate Retrieval Model with Merlin Models"
+    "### 4.1. Building and Training a Candidate Retrieval Model with Merlin Models"
    ]
   },
   {
@@ -788,7 +788,7 @@
    "id": "958bac45-2d09-473a-b32e-26f5c04471eb",
    "metadata": {},
    "source": [
-    "#### Exporting query (user) model"
+    "#### 4.1.1. Exporting query (user) model"
    ]
   },
   {
@@ -837,7 +837,7 @@
    "id": "7fbb593a-7630-415b-a4ca-707d4821885d",
    "metadata": {},
    "source": [
-    "### Train a ranking Model"
+    "### 4.2. Train a ranking Model"
    ]
   },
   {
@@ -1117,7 +1117,7 @@
    "id": "32593752-e229-44f0-9a01-b26b6a20fed3",
    "metadata": {},
    "source": [
-    "#### Set up a feature store with Feast"
+    "### 4.3. Set up a feature store with Feast"
    ]
   },
   {
@@ -1146,7 +1146,7 @@
    "id": "6301fbd4-0f74-4013-b5a0-0bd5386d3f3a",
    "metadata": {},
    "source": [
-    "Feast is an open source project that collects anonymized error reporting and usage statistics. To opt out or learn more see https://docs.feast.dev/reference/usage\n",
+    "[Feast](https://docs.feast.dev/) is an end-to-end open source feature store for machine learning. Feast (Feature Store) is a customizable operational data system that re-uses existing infrastructure to manage and serve machine learning features to real-time models.\n",
     "\n",
     "Below we create a new Feast repository called `feature_repo` under the `BASE_DIR`.\n",
     "\n",
@@ -1697,7 +1697,7 @@
    "id": "c6a34912-3bd1-4182-b8e7-2ac5d46ba875",
    "metadata": {},
    "source": [
-    "### Create feature definitions"
+    "### 4.4. Create feature definitions"
    ]
   },
   {
@@ -1858,7 +1858,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1872,7 +1872,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
