Update RecSys22 tutorial nbs' content wrt Sara's comments (#12)
* update content wrt Saras comments

* update

* Update

* Delete 03_Customize_Merlin_Models.ipynb

* Update

* update nbs

* fix headings and feast definition

--- a/tutorials/RecSys22tutorial/05-Deploying-multi-stage-RecSys-with-Merlin-Systems.ipynb
+++ b/tutorials/RecSys22tutorial/05-Deploying-multi-stage-RecSys-with-Merlin-Systems.ipynb
@@ -30,9 +30,9 @@
    "source": [
     "<img src=\"http://developer.download.nvidia.com/compute/machine-learning/frameworks/nvidia_logo.png\" style=\"width: 90px; float: right;\">\n",
     "\n",
-    "## 3. Deploying a Multi-Stage RecSys into Production with Merlin Systems and Triton Inference Server\n",
+    "## 5. Deploying a Multi-Stage RecSys into Production with Merlin Systems and Triton Inference Server\n",
     "\n",
-    "At this point, when you reach out to this notebook, we expect that you have already executed the previous notebook and exported all the required files and models. \n",
+    "At this point, when you reach out to this notebook, we expect that you have already executed the [previous notebook](04_Building_Multi_Stage_RecSys.ipynb) and exported all the required files and models. \n",
     "\n",
     "We are going to generate recommended items for a given user query (user_id) by following the steps described in the figure below."
    ]
@@ -62,7 +62,7 @@
    "id": "538677a3-acc6-48f6-acb6-d5bb5fe2e2d2",
    "metadata": {},
    "source": [
-    "### 3.1. Import required libraries and functions"
+    "### 5.1. Import required libraries and functions"
    ]
   },
   {
@@ -85,7 +85,7 @@
     "from merlin.systems.dag.ops.softmax_sampling import SoftmaxSampling\n",
     "from merlin.systems.dag.ops.tensorflow import PredictTensorflow\n",
     "from merlin.systems.dag.ops.unroll_features import UnrollFeatures\n",
-    "from merlin.systems.triton.utils import run_triton_server, run_ensemble_on_tritonserver"
+    "from merlin.systems.triton.utils import run_triton_server, run_ensemble_on_tritonserver, send_triton_request"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "id": "55ead20e-c573-462e-9aa2-c3494bf0129f",
    "metadata": {},
    "source": [
-    "### 3.2. Register our features on feature store"
+    "### 5.2. Register our features on feature store"
    ]
   },
   {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "66c02d67-df45-4869-8262-647cba77efcb",
    "metadata": {},
    "outputs": [],
@@ -131,11 +131,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/dli/task/feature_repo\n",
+      "/workspace/recsys_tutorial/feature_repo\n",
       "/usr/local/lib/python3.8/dist-packages/feast/feature_view.py:100: DeprecationWarning: The argument 'input' is being deprecated. Please use 'batch_source' instead. Feast 0.13 and onwards will not support the argument 'input'.\n",
       "  warnings.warn(\n",
-      "\u001b[1m\u001b[94mNo changes to registry\n",
-      "\u001b[1m\u001b[94mNo changes to infrastructure\n"
+      "Created entity \u001b[1m\u001b[32mproduct_id\u001b[0m\n",
+      "Created entity \u001b[1m\u001b[32muser_id_raw\u001b[0m\n",
+      "Created feature view \u001b[1m\u001b[32mitem_features\u001b[0m\n",
+      "Created feature view \u001b[1m\u001b[32muser_features\u001b[0m\n",
+      "\n",
+      "Created sqlite table \u001b[1m\u001b[32mfeature_repo_item_features\u001b[0m\n",
+      "Created sqlite table \u001b[1m\u001b[32mfeature_repo_user_features\u001b[0m\n",
+      "\n"
      ]
     }
    ],
@@ -149,7 +155,7 @@
    "id": "c641fcd2-bd11-4569-80d4-2ae5e01a5cad",
    "metadata": {},
    "source": [
-    "### 3.3. Loading features from offline store into an online store \n",
+    "### 5.3. Loading features from offline store into an online store \n",
     "\n",
     "After we execute `apply` and registered our features and created our online local store, now we need to perform [materialization](https://docs.feast.dev/how-to-guides/running-feast-in-production) operation. This is done to keep our online store up to date and get it ready for prediction. For that we need to run a job that loads feature data from our feature view sources into our online store. As we add new features to our offline stores, we can continuously materialize them to keep our online store up to date by finding the latest feature values for each user. \n",
     "\n",
@@ -170,12 +176,12 @@
      "text": [
       "Materializing \u001b[1m\u001b[32m2\u001b[0m feature views from \u001b[1m\u001b[32m2015-01-01 01:01:01+00:00\u001b[0m to \u001b[1m\u001b[32m2025-01-01 01:01:01+00:00\u001b[0m into the \u001b[1m\u001b[32msqlite\u001b[0m online store.\n",
       "\n",
-      "\u001b[1m\u001b[32muser_features\u001b[0m:\n",
-      "100%|█████████████████████████████████████████████████████| 351049/351049 [01:11<00:00, 4879.97it/s]\n",
       "\u001b[1m\u001b[32mitem_features\u001b[0m:\n",
-      "100%|███████████████████████████████████████████████████████| 51424/51424 [00:30<00:00, 1689.61it/s]\n",
-      "CPU times: user 2.09 s, sys: 681 ms, total: 2.77 s\n",
-      "Wall time: 2min 2s\n"
+      "100%|████████████████████████████████████████████████████████| 51375/51375 [01:38<00:00, 523.10it/s]\n",
+      "\u001b[1m\u001b[32muser_features\u001b[0m:\n",
+      "100%|██████████████████████████████████████████████████████| 350629/350629 [07:28<00:00, 782.41it/s]\n",
+      "CPU times: user 12.2 s, sys: 2.4 s, total: 14.6 s\n",
+      "Wall time: 9min 36s\n"
      ]
     }
    ],
@@ -186,18 +192,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fcc26e6-f6f3-4e44-bf3c-3b8e66dc9fd6",
-   "metadata": {},
-   "source": [
-    "Now, let's check our feature_repo structure again after we ran `apply` and `materialize` commands."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e768637c-0a4d-404b-8b58-7182fef0ab0e",
    "metadata": {},
    "source": [
-    "### 3.4. Candidate Generation: set up Faiss index using approximate nearest neighbor (ANN) search"
+    "### 5.4. Candidate Generation: set up Faiss index using approximate nearest neighbor (ANN) search"
    ]
   },
   {
@@ -205,7 +203,7 @@
    "id": "efada1e1-2556-4a26-b0ba-9cb96b3b151f",
    "metadata": {},
    "source": [
-    "Create a folder for faiss index path"
+    "Create a folder for faiss index path. [Faiss](https://github.com/facebookresearch/faiss) is a library for efficient similarity search and clustering of dense vectors."
    ]
   },
   {
@@ -269,7 +267,7 @@
    "id": "46697177-512a-473e-8cca-9fe51d3daa03",
    "metadata": {},
    "source": [
-    "### 3.5. Fetch user and item features from feature store built by FEAST"
+    "### 5.5. Fetch user and item features from feature store built by FEAST"
    ]
   },
   {
@@ -277,7 +275,7 @@
    "id": "489c3244-f260-485f-9796-938855a8c273",
    "metadata": {},
    "source": [
-    "Create feature store client with FEAST"
+    "Create feature store client with [FEAST](https://github.com/feast-dev/feast)."
    ]
   },
   {
@@ -330,15 +328,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-08-29 15:01:26.860746: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-08-29 15:01:26.862428: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-08-29 15:01:26.863446: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "<function tensorflow.python.dlpack.dlpack.from_dlpack(dlcapsule)>"
@@ -366,16 +355,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-08-29 15:01:27.263384: I tensorflow/core/platform/cpu_feature_guard.cc:194] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE3 SSE4.1 SSE4.2 AVX\n",
+      "2022-09-07 18:48:18.028111: I tensorflow/core/platform/cpu_feature_guard.cc:194] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  SSE3 SSE4.1 SSE4.2 AVX\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-08-29 15:01:27.264055: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-08-29 15:01:27.265123: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-08-29 15:01:27.266071: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-08-29 15:01:28.816757: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-08-29 15:01:28.817799: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-08-29 15:01:28.818788: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:991] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2022-08-29 15:01:28.819711: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 8080 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:00:1e.0, compute capability: 7.0\n",
-      "08/29/2022 03:01:29 PM WARNING:No training configuration found in save file, so the model was *not* compiled. Compile it manually.\n"
+      "2022-09-07 18:48:20.129980: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1532] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 16255 MB memory:  -> device: 0, name: Tesla V100-SXM2-32GB-LS, pci bus id: 0000:8a:00.0, compute capability: 7.0\n",
+      "09/07/2022 06:48:22 PM WARNING:No training configuration found in save file, so the model was *not* compiled. Compile it manually.\n"
      ]
     }
    ],
@@ -416,7 +399,7 @@
    "id": "304a4d09-db05-4666-b520-75dbbbc7ab17",
    "metadata": {},
    "source": [
-    "Merge the user features and items features to create the all set of combined features that were used in model training using `UnrollFeatures` operator which takes a target column and joins the \"unroll\" columns to the target. This helps when broadcasting a series of user features to a set of items."
+    "Merge the user features and items features to create the all set of combined features that were used in model training using `UnrollFeatures` operator which takes a target column and joins the \"unroll\" columns to the target. This helps when broadcasting a series of user features to a set of items, in other words, we take one set of user features and send it to many sets of item features."
    ]
   },
   {
@@ -481,7 +464,7 @@
    "id": "f4e2e389-d884-44a1-8e32-4916a0eb43cf",
    "metadata": {},
    "source": [
-    "### 3.6. Export inference graph as an Ensemble\n",
+    "### 5.6. Export inference graph as an Ensemble\n",
     "The last step is to create the ensemble artifacts that TIS can consume. To make these artifacts import the Ensemble class. This class  represents an entire ensemble consisting of multiple models that run sequentially in TIS initiated by an inference request. It is responsible with interpreting the graph and exporting the correct files for TIS."
    ]
   },
@@ -550,10 +533,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "6203d020-79fc-4ab0-bec7-4f7ef0ca8406",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ordered_ids']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create outputs variable and print the output column name\n",
     "outputs = ensemble.graph.output_schema.column_names\n",
@@ -570,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "89182219-40a6-458c-af0e-7a8e83f364aa",
    "metadata": {},
    "outputs": [
@@ -638,7 +632,7 @@
     "tags": []
    },
    "source": [
-    "### 3.7. Starting Triton Server"
+    "### 5.7. Sending Request to TIS and Retrieving Recommendations"
    ]
   },
   {
@@ -651,14 +645,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c0a798f-6abf-4cbb-87f8-f60a6e757092",
-   "metadata": {},
-   "source": [
-    "### 3.8. Sending Request to TIS and Retrieving Recommendations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "4e3fe264-e4a4-4dab-9b04-f83fb696d7d1",
    "metadata": {},
    "source": [
@@ -667,13 +653,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "e95f1d85-9cbc-423b-9de1-91d1e421e5e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from merlin.systems.triton.utils import send_triton_request\n",
     "from merlin.core.dispatch import make_df\n",
     "\n",
     "# create a request to be sent to TIS\n",
@@ -686,7 +670,7 @@
    "id": "aeda3f0a-35ed-40be-97f1-067d136b97b5",
    "metadata": {},
    "source": [
-    "This command will launch the server and load all the models to the server. Once all the models are loaded successfully, you should see `READY` status printed out in the terminal for each loaded model. Then we send request to TIS with `send_triton_request` function and this will return top 10 raw product ids from TIS."
+    "The following `run_triton_server` command will launch the TIS and load all the models to the server. Once all the models are loaded successfully, you should see `READY` status printed out for each loaded model. Then we send request to TIS with `send_triton_request` function and this will return top 10 raw product ids from TIS."
    ]
   },
   {
@@ -696,18 +680,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from merlin.systems.triton.utils import run_triton_server\n",
-    "\n",
-    "with run_triton_server('/dli/task/poc_ensemble'):\n",
+    "with run_triton_server('/workspace/recsys_tutorial/poc_ensemble'):\n",
     "    response = send_triton_request(request, ['ordered_ids'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "e4bcc320-a59a-4ade-9e0e-eb3e5985d1b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recommended top 10 product ids: \n",
+      " [[100117224]\n",
+      " [100116849]\n",
+      " [ 12201761]\n",
+      " [  1004767]\n",
+      " [ 13201032]\n",
+      " [  6500686]\n",
+      " [ 30000133]\n",
+      " [100117267]\n",
+      " [  7900923]\n",
+      " [  3701239]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"recommended top 10 product ids: \\n\", response['ordered_ids'])"
    ]
@@ -717,7 +717,7 @@
    "id": "b4605dbe-5f97-4b31-8ee4-ce7c1cb69d97",
    "metadata": {},
    "source": [
-    "That's it! You finished deploying a multi-stage Recommender Systems on Triton Inference Server using Merlin framework."
+    "That's it! You finished deploying a multi-stage Recommender System on Triton Inference Server using Merlin framework."
    ]
   },
   {
