update heading number

--- a/tutorials/RecSys22tutorial/04-Building-multi-stage-RecSys.ipynb
+++ b/tutorials/RecSys22tutorial/04-Building-multi-stage-RecSys.ipynb
@@ -262,7 +262,7 @@
    "id": "68cb8a3b-e60e-4815-9d72-c7d0e6c6ca6f",
    "metadata": {},
    "source": [
-    "### 4.1 Building and Training a Candidate Retrieval Model with Merlin Models"
+    "### 4.1. Building and Training a Candidate Retrieval Model with Merlin Models"
    ]
   },
   {
