--- a/tutorials/GTC23tutorial/02-ETL-with-NVTabular.ipynb
+++ b/tutorials/GTC23tutorial/02-ETL-with-NVTabular.ipynb
@@ -242,7 +242,9 @@
    "id": "03bbaf01-63ed-4380-ba0c-f8cf943ea9ce",
    "metadata": {},
    "source": [
-    "Group interactions (each user travel) into sessions."
+    "Let's group interactions (each user travel) into sessions. Currently, every row is a traveled city in the dataset. Our goal is to predict (and recommend) the final city (city_id) of each trip (utrip_id). Therefore, we groupby the dataset by `utrip_id` to have one row for each prediction.\n",
+    "\n",
+    "Each row will have a sequence of encoded city ids with which a user visited. The NVTabular GroupBy op enables the transformation by sorting the columns according to `checkin` date, and then aggregating the interactions per utrip_id based on the aggregation method we define."
    ]
   },
   {
