--- a/tutorials/GTC23tutorial/00-Introduction.ipynb
+++ b/tutorials/GTC23tutorial/00-Introduction.ipynb
@@ -102,11 +102,11 @@
     "We created the tutorial content considering what would a data scientist's or deep learning engineer's approach be when handling this task. As most of us do, we will start with analyzing the data, then move on with transforming the data, and creating features. When it comes to modeling part, we can start with a simple deep learning model, before creating more complicated models.\n",
     "\n",
     "The tutorial consists of 5 notebooks:<br>\n",
-    "- 01-Data-analysis-and-preparation\n",
-    "- 02-ETL-with-NVTabular\n",
-    "- 03-Next-item-prediction-with-MLP\n",
-    "- 04-Next-item-prediction-with-LSTM\n",
-    "- 05-Next-item-prediction-with-Transformers"
+    "- [01-Data-analysis-and-preparation](./01-Data-analysis-and-preparation.ipynb)\n",
+    "- [02-ETL-with-NVTabular](./02-ETL-with-NVTabular.ipynb)\n",
+    "- [03-Next-item-prediction-with-MLP](./03-Next-item-prediction-with-MLP.ipynb)\n",
+    "- [04-Next-item-prediction-with-LSTM](./04-Next-item-prediction-with-LSTM.ipynb)\n",
+    "- [05-Next-item-prediction-with-Transformers](./05-Next-item-prediction-with-Transformers.ipynb)"
    ]
   },
   {
