--- a/tutorials/GTC23tutorial/02-ETL-with-NVTabular.ipynb
+++ b/tutorials/GTC23tutorial/02-ETL-with-NVTabular.ipynb
@@ -703,7 +703,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=cudf.read_parquet('/workspace/data/train/part_0.parquet')"
+    "df=cudf.read_parquet(os.path.join(DATA_FOLDER, 'train', 'part_0.parquet'))"
    ]
   },
   {
@@ -824,7 +824,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -838,7 +838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
