--- a/tutorials/GTC23tutorial/00-Introduction.ipynb
+++ b/tutorials/GTC23tutorial/00-Introduction.ipynb
@@ -31,7 +31,7 @@
    "id": "bc88f16e-e89c-45d9-ab93-870e9c4b5608",
    "metadata": {},
    "source": [
-    "# Building Session-Based Recommendation Models with Merlin"
+    "# Building Session-based Recommendation Models with Merlin"
    ]
   },
   {
