--- a/tutorials/GTC23tutorial/01-Data-analysis-and-preparation.ipynb
+++ b/tutorials/GTC23tutorial/01-Data-analysis-and-preparation.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "The main task is to use a dataset based on over a million of real anonymized accommodation reservations to come up with a strategy for making the best recommendation for travelers' next destination.\n",
     "\n",
-    "The goal is to create a DL model that can predict the `city_id` of the final reservation of each trip."
+    "The goal is to create a deep learning (DL) model that can predict the `city_id` of the final reservation of each trip."
    ]
   },
   {
