--- a/tutorials/GTC23tutorial/02-ETL-with-NVTabular.ipynb
+++ b/tutorials/GTC23tutorial/02-ETL-with-NVTabular.ipynb
@@ -39,7 +39,7 @@
    "id": "9e33099a-adb8-4d50-b00a-fa83584f04fb",
    "metadata": {},
    "source": [
-    "### 2.1. Feature Engineering on GPU with NVTabular"
+    "### 2.1. Feature Engineering with NVTabular on GPU"
    ]
   },
   {
@@ -70,7 +70,7 @@
     "- Groupby dataset with `Groupby` op\n",
     "- Transform continuous features with `LogOp` and `Normalize` operators\n",
     "- Truncate the sequences using `LambdaOp`\n",
-    "- Export the preprocessed datasets as parquet files and schema file"
+    "- Export the preprocessed datasets as parquet files and the schema file"
    ]
   },
   {
