--- a/tutorials/GTC23tutorial/03-Next-item-prediction-with-MLP.ipynb
+++ b/tutorials/GTC23tutorial/03-Next-item-prediction-with-MLP.ipynb
@@ -57,7 +57,7 @@
    "id": "8fc1f387-cc58-4439-ae7a-454d56efd14f",
    "metadata": {},
    "source": [
-    "In this tutorial, we introduce the Merlin Models an open-source library that is designed to provide standard models for recommender systems with an aim for high-quality implementations that range from classic machine learning models to highly-advanced deep learning models. With Merlin Models we import from the HF Transformers NLP library the transformer architectures and their configuration classes.\n",
+    "In this tutorial, we introduce the [Merlin Models](https://github.com/NVIDIA-Merlin/models) an open-source library that is designed to provide standard models for recommender systems with an aim for high-quality implementations that range from classic machine learning models to highly-advanced deep learning models. With Merlin Models we import from the HF Transformers NLP library the transformer architectures and their configuration classes.\n",
     "\n",
     "In addition, Merlin Models provides additional blocks necessary for recommendation, e.g., input features normalization and aggregation, and heads for recommendation and sequence classification/prediction. We also extend their Trainer class to allow for the evaluation with RecSys metrics"
    ]
