--- a/tutorials/GTC23tutorial/04-Next-item-prediction-with-LSTM.ipynb
+++ b/tutorials/GTC23tutorial/04-Next-item-prediction-with-LSTM.ipynb
@@ -39,7 +39,7 @@
    "id": "a8f1bdf4-79be-4953-a8b5-c44c92f6fc7a",
    "metadata": {},
    "source": [
-    "In the previous example, we built, trained and evaluated an MLP model using sequential and scalar input features. Although we get promising accuracy results, MLP model does not take the sequential patterns into concern. We have to average the embedding values for the list categorical features, and aggregate (take average) the list continuos values.\n",
+    "In the previous example, we built, trained and evaluated an MLP model using sequential and scalar input features. Although we get promising accuracy results, MLP model does not take the sequential patterns into account. That means we do average the embedding values for the list categorical features, and aggregate (take average) the list continuous values before feeding them to MLP block.\n",
     "\n",
     "In this example, we use a type of Recurrent Neural Networks (RNN) - the Long Short-term Memory Networks (LSTM)[1, 2] - to do next-city prediction using a sequence of events (trip history in our example) per user in a given trip (session). As a type of RNN, an LSTM model are a class of neural networks that is being used for modeling sequence data such as time series or natural language.\n",
     "\n",
