--- a/tutorials/GTC23tutorial/04-Next-item-prediction-with-LSTM.ipynb
+++ b/tutorials/GTC23tutorial/04-Next-item-prediction-with-LSTM.ipynb
@@ -39,7 +39,7 @@
    "id": "a8f1bdf4-79be-4953-a8b5-c44c92f6fc7a",
    "metadata": {},
    "source": [
-    "In the previous example, we built, trained and evaluated an MLP model using sequential and scalar input features. Although we get promising accuracy results, MLP model does not take the sequential patterns into account. That means we do average the embedding values for the list categorical features, and aggregate (take average) the list continuous values before feeding them to MLP block.\n",
+    "In the previous example, we built, trained and evaluated an MLP model using sequential and scalar input features. Although we get promising accuracy results, MLP model does not take the sequential patterns into concern. We have to average the embedding values for the list categorical features, and aggregate (take average) the list continuos values.\n",
     "\n",
     "In this example, we use a type of Recurrent Neural Networks (RNN) - the Long Short-term Memory Networks (LSTM)[1, 2] - to do next-city prediction using a sequence of events (trip history in our example) per user in a given trip (session). As a type of RNN, an LSTM model are a class of neural networks that is being used for modeling sequence data such as time series or natural language.\n",
     "\n",
@@ -59,9 +59,11 @@
    "id": "c85cf072-49fa-4e0f-931b-32656a187bd3",
    "metadata": {},
    "source": [
-    "In our case, the input of the LSTM layer is a representation of the user interaction, the internal LSTM hidden state encodes a representation of the session based on past interactions and the outputs are the next-item predictions. Basically, for each item in a given trip session, we generate the output (logit values) as the predicted preference of the items, i.e. the likelihood of being the next. \n",
+    "In general, LSTM models are coupled with Causal Language Modeling (CLM) pre-training scheme, which is the task of predicting the token following a sequence of tokens, where the model only attends to the left context, i.e. models the probability of a token given the previous tokens (city_ids in our case) in a sequence [3]. \n",
     "\n",
-    "In general, LSTM models are coupled with Causal Language Modeling (CLM) pre-training scheme, which is the task of predicting the token following a sequence of tokens, where the model only attends to the left context, i.e. models the probability of a token given the previous tokens (item_ids in our case) in a sequence [3]. In this example, we train LSTM model using `SequencePredictLast` technique, where we use the entire sequence to predict the last item (city), rather than performing a sliding approach to do next-item prediction."
+    "In our case, the input of the LSTM layer is a representation of the user interaction, the internal LSTM hidden state encodes a representation of the session based on past interactions and the outputs are the next-item predictions. For a given trip session, our proposed LSTM model generates logit values as predictions for the user's preference of the next item in the sequence. These logit values represent the likelihood of each item being the next one, and are based on the hidden representation of the last item in the session.\n",
+    "\n",
+    "To do so, we train an LSTM model using [SequencePredictLast](https://github.com/NVIDIA-Merlin/models/blob/main/merlin/models/tf/transforms/sequence.py#L254) technique, where we use the entire sequence to predict the next item (city), rather than performing a sliding approach to do next-item prediction."
    ]
   },
   {
@@ -631,7 +633,7 @@
    "id": "b0b8e3f4-f3ac-401a-b4fb-c806f67e7b38",
    "metadata": {},
    "source": [
-    "### 4.2. LSTM Model"
+    "### 4.2. Build an LSTM model architecture"
    ]
   },
   {
@@ -685,7 +687,7 @@
    "source": [
     "If you noticed, here we set `sequence_combiner` to None, since, we do not want to combine the embeddings for each position in a given sequence.\n",
     "\n",
-    "We also add `post` argument in the `InputBlockV2` to broadcast the scalar features to list features. With [BroadcastToSequence](https://github.com/NVIDIA-Merlin/models/blob/main/merlin/models/tf/transforms/features.py#L814) class, we are able to broadcast the context features (e.g. `num_city_visited` in our example) to match the timesteps of sequence features."
+    "We also add post argument in the `InputBlockV2` to broadcast the scalar features to list features. With [BroadcastToSequence](https://github.com/NVIDIA-Merlin/models/blob/main/merlin/models/tf/transforms/features.py#L814) class, we are able to replicate the scalar value (e.g. `num_city_visited` in our example) for each position in the sequence to match the timesteps of sequence features."
    ]
   },
   {
@@ -756,6 +758,14 @@
     "        kernel_regularizer=regularizers.l2(1e-4),\n",
     "    )\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "397e0b24-b762-4776-b0ec-dd4dedbdfe82",
+   "metadata": {},
+   "source": [
+    "When `return_sequences` is set to `False` in `tf.keras` LSTM layers, only the last hidden state output (h<N>) is returned, which captures an abstract representation of the input sequence."
    ]
   },
   {
@@ -845,7 +855,7 @@
    "id": "8ee03b88-7be1-4f07-8fb7-5fd8c9992ff7",
    "metadata": {},
    "source": [
-    "`mm.SequencePredictLast` tells us the last item in sequence is the target and LSTM should return the hidden representation of the last item."
+    "The [SequencePredictLast](https://github.com/NVIDIA-Merlin/models/blob/main/merlin/models/tf/transforms/sequence.py#L254) class indicates that the last item in the sequence is the target. As a result, all the sequential input features are truncated before the last position, and the target is extracted as the last element of the sequence of city_ids. Based on that LSTM should return the hidden representation of the last item."
    ]
   },
   {
