--- a/tutorials/GTC23tutorial/04-Next-item-prediction-with-LSTM.ipynb
+++ b/tutorials/GTC23tutorial/04-Next-item-prediction-with-LSTM.ipynb
@@ -633,7 +633,7 @@
    "id": "431c1fd9-8025-4b3f-a7a6-8bd975f3fa3e",
    "metadata": {},
    "source": [
-    "We define the embedding dimension of certain categorical features. Note that with `dim` arg, wefeed a fix dimension for all  categorical features. In this example, we set the embedding dimension as `16` for each categorical feature."
+    "We define the embedding dimension of certain categorical features. Note that with `dim` arg, we feed a fix dimension for all  categorical features. In this example, we set the embedding dimension as `16` for each categorical feature."
    ]
   },
   {
@@ -1064,7 +1064,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1078,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
