--- a/tutorials/GTC23tutorial/05-Next-item-prediction-with-Transformers.ipynb
+++ b/tutorials/GTC23tutorial/05-Next-item-prediction-with-Transformers.ipynb
@@ -270,7 +270,7 @@
    "id": "157139dc-d1ca-43fc-aed6-c5a34b5e9eac",
    "metadata": {},
    "source": [
-    "We can do high-level visualization of the building blocks of the Merlin Transformers API as below."
+    "We can do high-level visualization of the building blocks of the Transformer model as below."
    ]
   },
   {
@@ -278,7 +278,7 @@
    "id": "ee148667-1027-4d84-bfbd-6b5f2da98be8",
    "metadata": {},
    "source": [
-    "<center><img src=\"./images/TransformerAPI.png\" width=600 height=200/></center>"
+    "<center><img src=\"./images/transformer_model.png\" width=600 height=200/></center>"
    ]
   },
   {
@@ -374,20 +374,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "c9cce3f7-b001-4609-a7a0-99df20bdbff1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mlp_block = mm.MLPBlock(\n",
-    "                [128,dmodel],\n",
-    "                activation='relu',\n",
-    "                no_activation_last_layer=True,\n",
-    "            )"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "6435ca89-3cd2-4a1c-90ca-70f2f0f17253",
    "metadata": {},
@@ -448,6 +434,20 @@
     "Let's create a sequential block where we connect sequential inputs block (i.e., a SequentialLayer represents a sequence of Keras layers) with MLPBlock and then XLNetBlock. XLNet architecture [2] was originally proposed to be trained with the Permutation Language Modeling (PLM) technique, that combines the advantages of autoregressive (Causal LM) and autoencoding (Masked LM). However, with Merlin Models TF API, we are able to decouple model architecture and masking approach. With that, in this example, we perform next-item prediction with Causal Language Modeling (CLM) approach, which involves an auto-regressive model with sliding window predictions, where only the left context of position `n` is used to predict target `n+1`.<br>\n",
     "\n",
     "Below we use MLPBlock as a projection block to match the output dimensions of the seq_inputs block with the transformer block. In other words, due to residual connection in the Transformer model, we add an MLPBlock in the model pipeline. The output dim of the input block should match with the hidden dimension (d_model) of the XLNetBlock."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adb5df64-c251-40de-b25d-3aae13e202b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlp_block = mm.MLPBlock(\n",
+    "                [128,dmodel],\n",
+    "                activation='relu',\n",
+    "                no_activation_last_layer=True,\n",
+    "            )"
    ]
   },
   {
@@ -805,7 +805,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -819,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
